[package]
name = "lowkey"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.86"
async-nats = "0.36.0"
async-trait = "0.1.82"
bson = "2.11.0"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.7", features = ["json"] }
rusttwald = "0.1.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
