[package]
name = "lowkey"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.89"
async-nats = "0.36.0"
async-trait = "0.1.83"
bson = "2.13.0"
dotenv = "0.15.0"
env_logger = "0.11.5"
futures = "0.3.30"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
rusttwald = "0.1.1"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
mittlife_cycles = { version = "0.1.1", features = [ "actixheader" ] }
base64 = "0.22.1"
serde_json = "1.0.131"

[build-dependencies]
anyhow = "1.0.89"
